objects/Launch__c.object
<CustomObject>
    <fields>
        <fullName>New_Import_or_Export_3rd_Party__c</fullName>
        <defaultValue>&quot;3rd Party Export or Import Vendor Name:&quot; &amp;BR()&amp;
&quot;If import - Type of inventory requested: (New, Used, Both)&quot; &amp;BR()&amp;
&quot;Dealer Account #: (if vendor requires Cars.com, Autotrader, DMI, etc.)&quot;</defaultValue>
        <inlineHelpText>Please fill out this template if the dealership is using a 3rd party for inventory.</inlineHelpText>
        <label>New Import or Export 3rd Party</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>New_Import_or_Export_Vendor__c</fullName>
        <defaultValue>&quot;Please Provide Vendor Information:&quot;&amp; BR() &amp; 
&quot;Vendor Name:&quot;&amp; BR() &amp; 
&quot;Vendor Contact Name:&quot;&amp; BR() &amp; 
&quot;Vendor Contact Phone:&quot;&amp; BR() &amp; 
&quot;Vendor Contact Email:&quot;&amp; BR() &amp; 
&quot;Company URL:&quot;&amp; BR() &amp; 
&quot;Notes:&quot;</defaultValue>
        <inlineHelpText>Please fill out this template if the dealership is using an import or export feed for inventory.</inlineHelpText>
        <label>New Import or Export Vendor</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>New_Name__c</fullName>
        <label>New Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Nitra_Password__c</fullName>
        <label>Nitra Password</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Nitra_Username__c</fullName>
        <label>Nitra Username</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>No_of_Dealers_in_LMA__c</fullName>
        <label># of Dealers in LMA</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Notice_to_Book_Order_Recd_Attached__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Notification to Book Order Received and Attached</inlineHelpText>
        <label>Notice to Book Order Rec&apos;d &amp; Attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OEM__c</fullName>
        <description>This field is not intended for display on a page layout (it may be if it is helpful, but there was no need at the time of creation). This field was created to support formulas.</description>
        <formula>WebID__r.OEM__c</formula>
        <label>OEM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OMS_Email__c</fullName>
        <description>This field is updated by a workflow with the Online Marketing Specialist (Digital Advertising Specialists) email from the WebId object.</description>
        <label>OMS Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>OM_Integralink_Ticket__c</fullName>
        <inlineHelpText>Enter Integralink ticket id - if Id is entered link at the bottom of page can be used to access the ticket.</inlineHelpText>
        <label>OM Integralink Ticket #</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Old_Address__c</fullName>
        <label>Old Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Old_Name__c</fullName>
        <label>Old Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Online_Marketing_Specialist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DA Specialist</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Launch6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Open_Status__c</fullName>
        <description>This field is meant to give an Open or Closed value only depending on the current status of the launch record.  If new statuses are entered that should also mean closed they need to be added to this formula.</description>
        <formula>IF( 
OR( 
ispickval( Status__c , &quot;Closed&quot;), 
Ispickval( Status__c, &quot;Closed w/ Data&quot;), 
Ispickval( Status__c, &quot;Closed w/o Data&quot;) 
), 

&quot;Closed&quot;, 
IF( 
OR( 
IsPickval( Status__c, &quot;Closed Preactivation Cancellation&quot;), 
IsPickval(Status__c,&quot;Closed as Duplicate&quot;) 
), 
&quot;Cancelled&quot;, &quot;Open&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Launch</relationshipLabel>
        <relationshipName>Launch</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Oracle_Order_Number__c</fullName>
        <inlineHelpText>Please enter all Oracle Order Numbers associated with this launch.  If there are multiple, please separate by commas.</inlineHelpText>
        <label>Oracle Order Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Closed_Waiting_on_Data_Date__c</fullName>
        <description>A data will populate this field through a workflow when Status is set to &quot;Order Closed Waiting on Data&quot;</description>
        <label>Order Closed Waiting on Data Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Order_Form_Attached__c</fullName>
        <inlineHelpText>If &apos;N/A&apos; is selected, you must provide a reason.</inlineHelpText>
        <label>Order Form Attached</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Order_Includes_Video_Component__c</fullName>
        <label>Order Includes Video Component</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Order_Manager_Banner_Notes__c</fullName>
        <label>Order Manager Banner Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Order_Manager_Build_Notes__c</fullName>
        <label>Order Manager Build Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Order_Manager_Data_Ops_Notes__c</fullName>
        <label>Order Manager Data Ops Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Order_Manager_Domain_Notes__c</fullName>
        <label>Order Manager Domain Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Order_Manager_Inventory_Notes__c</fullName>
        <label>Order Manager Inventory Notes</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Order_Manager_QA_Notes__c</fullName>
        <label>Order Manager QA Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Order_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>LaunchtNEa</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Priority__c</fullName>
        <inlineHelpText>Please enter order priority.  If this is a 911 order, please fill out the 911 additional information section below.</inlineHelpText>
        <label>Order Priority</label>
        <picklist>
            <picklistValues>
                <fullName>Pending 911</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>911</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fast Track</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Services Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Normal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enhancement</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Order_Signed_Date__c</fullName>
        <label>Order Signed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Order_Submitted_By__c</fullName>
        <label>Order Submitted By</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Type__c</fullName>
        <label>Order Type</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Upgrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Downgrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multi-Brand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resurrection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strategy Change</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Owner_Marketing_Id__c</fullName>
        <label>Email Marketing Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Launch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Launch</label>
        <referenceTo>Launch__c</referenceTo>
        <relationshipLabel>Related Launches</relationshipLabel>
        <relationshipName>Launch</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parts_Accessories_Budget__c</fullName>
        <inlineHelpText>Please Enter the Parts &amp; Accessories Budget OR N/A in this field.</inlineHelpText>
        <label>Parts &amp; Accessories Budget</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phase_Status__c</fullName>
        <description>Used in NRM Launch record type only for phased implementation tracking.</description>
        <label>Phase Status</label>
        <picklist>
            <picklistValues>
                <fullName>Phase 1 In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phase 1 Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phase 2 In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phase 2 Complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PowerSEO_Product__c</fullName>
        <description>This should be a hidden field.  This is just used for a workflow alert.</description>
        <formula>WebID__r.PowerSEO_Product__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PowerSEO Product</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PowerSEO_Specialist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PowerSEO Specialist</label>
        <referenceTo>User</referenceTo>
        <relationshipName>LaunchQR4N</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Power_SEO_Price_Change__c</fullName>
        <label>Power SEO Price Change</label>
        <picklist>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price increase complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price decrease complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <picklist>
            <picklistValues>
                <fullName>Accessories Page</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Address Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advanced Reputation Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agency Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audience Insights Package</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audience Insights Portal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audience Management Package</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audience Management Portal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audience Optimization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audience Tag</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Base</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cobalt AutoShow for Exports Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact Us Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Core</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Core/ProSite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Email Aliases (each 10)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Buy/Sell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DAP+Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Group Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Inventory Export Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Display</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Domain Name Hosting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Domain or Email Misc Charges</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Domain or Email Misc One Time Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Hosting Upgrade (25 GB Increase)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Hosting Upgrade (Add&apos;l Mailboxes)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Marketing Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Marketing Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Essentials Reputation Management</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Promotion_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If this order is associated with a special project, promotion, LMA play etc, please enter that information here.  If the special project/promotion does not show in the search, please inform your manager.</inlineHelpText>
        <label>Promotion/Project</label>
        <referenceTo>Launch_Promotions_Projects__c</referenceTo>
        <relationshipLabel>Launch</relationshipLabel>
        <relationshipName>Launch</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Proto_Loop_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Each time the Build Status is set to “Proto Loop” the count will go up by 1.</inlineHelpText>
        <label>Proto Loop Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Proto_Ready_Date__c</fullName>
        <inlineHelpText>This is the time stamp for the first time the Build Status went to “Proto Ready.”</inlineHelpText>
        <label>Proto Ready Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Published_Site_in_WSM__c</fullName>
        <label>Published Site in WSM</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QA_Activation_OM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>QA Activation OM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Launch7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QA_Age__c</fullName>
        <formula>IF(ISNULL(QA_Assign_Date__c),NULL,
IF(ISNULL(QA_Completion_Date__c),NOW()-QA_Assign_Date__c,QA_Completion_Date__c-QA_Assign_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QA Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QA_Assign_Date__c</fullName>
        <inlineHelpText>Date/Time stamp for when the QA Activation OM was first assigned to this Launch record.</inlineHelpText>
        <label>QA Assign Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>QA_Budget_in_Media_UI_Salesforce__c</fullName>
        <label>Budget in Media/UI/Salesforce</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QA_Builder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>QA Builder</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Launch9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QA_Completion_Date__c</fullName>
        <inlineHelpText>Date/Time stamp for when the QA Status was set to &quot;QA Complete&quot; the last time.</inlineHelpText>
        <label>QA Completion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>QA_Dealer_Generation__c</fullName>
        <label>Dealer Generation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QA_Dealer_Logos__c</fullName>
        <label>Dealer Logos</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QA_Dealer_Taglines__c</fullName>
        <label>Dealer Taglines</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QA_Dealer_Targeting__c</fullName>
        <label>Dealer Targeting</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QA_Display_Ad_Ref_Order_ID__c</fullName>
        <label>Display Ad Ref Order ID</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QA_LMA_UI_URLs__c</fullName>
        <label>LMA UI URL&apos;s</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QA_Notes__c</fullName>
        <label>QA Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QA_Offer_Editor__c</fullName>
        <label>Offer Editor</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QA_Open_Status__c</fullName>
        <formula>IF( 
OR( 
ISPICKVAL( QA_Status__c , &quot;QA Complete&quot;), 
CONTAINS(TEXT( QA_Status__c ) , &quot;N/A &quot;) 
),&quot;Closed&quot;, &quot;Open&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QA Open Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QA_Proforma_Added_to_Master_Sheet__c</fullName>
        <label>Proforma Added to Master Sheet</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QA_Request_Submit_Date__c</fullName>
        <inlineHelpText>Date/Time stamp when QA was request of an Activation OM.</inlineHelpText>
        <label>QA Request Submit Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>QA_Request_Submitted__c</fullName>
        <inlineHelpText>When the order is ready to submit to another Activation Order Manager for QA, set this field to today&apos;s date.  Will automatically flip the QA Status to &quot;Ready for QA.&quot;</inlineHelpText>
        <label>QA Request Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QA_Resubmit_Date__c</fullName>
        <inlineHelpText>Enter today&apos;s date if more QA work needs to be done and the QA Status is set to &quot;QA Complete.&quot;</inlineHelpText>
        <label>QA Resubmit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QA_Search_Ads__c</fullName>
        <label>Search Ads</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QA_Status__c</fullName>
        <inlineHelpText>&quot;Ready for QA&quot; will put the Launch in the QA queue.</inlineHelpText>
        <label>QA Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready for QA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>With QA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Issue Sent to Order Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QA Complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RFP_Attached__c</fullName>
        <label>RFP Attached</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RMS_Email__c</fullName>
        <description>This field is updated by a workflow with the Reputation Management Specialist email from the WebId object.</description>
        <label>RMS Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Re_Launch_Date__c</fullName>
        <description>If the WebID has been canceled for less than 6 months, use the Relaunch Date.</description>
        <inlineHelpText>Use for accounts that have been canceled for less than 6 months.</inlineHelpText>
        <label>Re-Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ready_for_Media__c</fullName>
        <label>Ready for Media</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ready_for_QA__c</fullName>
        <label>Ready for QA</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Recap_Attached__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recap Attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Recap__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recap</label>
        <referenceTo>Recap__c</referenceTo>
        <relationshipLabel>Launch</relationshipLabel>
        <relationshipName>Launch</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>MIDWEST REGION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NORTH CENTRAL REGION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NORTHEAST REGION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PACIFIC REGION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SOUTH CENTRAL REGION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SOUTHEAST REGION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WESTERN REGION</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Regional_Account_Director__c</fullName>
        <formula>IF( ISBLANK( Recap__r.Owner:User.Id ), Owner:Queue.QueueEmail, Owner:User.Email )</formula>
        <label>Regional Account Director</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Launch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Launch</label>
        <referenceTo>Launch__c</referenceTo>
        <relationshipLabel>Launch</relationshipLabel>
        <relationshipName>Related_Launch</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reputation_Management_Specialist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reputation Management Specialist</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Launch1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requested_By__c</fullName>
        <inlineHelpText>Please enter the name of the person that requested the 911 priority for this order</inlineHelpText>
        <label>Requested By</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requested_Due_Date__c</fullName>
        <inlineHelpText>Please enter the date the requester would like the order completed by.</inlineHelpText>
        <label>Requested Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SEO_Email__c</fullName>
        <description>This field is updated by a workflow with the SEO Specialist email from the WebId object.</description>
        <label>SEO Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SEO_Specialist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SEO Specialist</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Launch5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMS_Email__c</fullName>
        <description>This field is updated by a workflow with the Social Media Specialist email from the WebId object.</description>
        <label>SMS Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>S_P_Flex_Budget__c</fullName>
        <inlineHelpText>Service &amp; Parts Flex Budget Amount</inlineHelpText>
        <label>S&amp;P Flex Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Salesforce_Notes__c</fullName>
        <label>Salesforce Notes</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Salesforce_Score__c</fullName>
        <label>Salesforce Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Score_Summary__c</fullName>
        <formula>Salesforce_Score__c + Collections_Score__c + User_Administration_Score__c + VoiceStar_Score__c + WSM_Score__c + Design_Appeal_Difficulty_Score__c + Graphics_Folder_Source_Files_Score__c + Builder_Checklist_Score__c+ WSM_Internal_Pages_Score__c</formula>
        <inlineHelpText>Sums all Scores in the Build QA Section once they are all filled out.  If one does not apply, please enter 0 in that Score field.</inlineHelpText>
        <label>Score Summary</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Secondary_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Enter the name of the alternate contact (other than the OM) on this case that needs to receive notifications.  For example: Account Advocate during Holden Activations.</inlineHelpText>
        <label>Secondary Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Launch3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Send_Onboarding__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to help control the number of times an onboarding notification is sent to Service Ops (used in WF for all RT&apos;s but DAP, which is sent upon creation and does not need a control). This is not intended to display on the page layout.</description>
        <label>Send Onboarding</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_SEO_Onboarding__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to help control the number of times an onboarding notification is sent to Service Ops. Some launch record types have to send multiple onboarding notifications at different times, and this helps balance that out. This is not intended to display on the page layout.</description>
        <label>Send SEO Onboarding</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sent_AA_Assign_Alert__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is not intended to go on any page layouts. This is just a workflow checkbox to make sure we are not sending out multiple alerts.</description>
        <label>Sent AA Assign Alert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sent_Activation_Email_to_Dealer__c</fullName>
        <label>Sent Activation Email to Dealer</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sent_Proto_Email_to_Dealer__c</fullName>
        <label>Sent Proto Email to Dealer</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ship_To_Address__c</fullName>
        <label>Ship To Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Ship_To_Name__c</fullName>
        <label>Ship To Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_QA_Completed__c</fullName>
        <label>Site QA Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Site_Restore__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check when the site restore button was used to bring a cancelled website back up.</description>
        <inlineHelpText>Check when the site restore button was used to bring a cancelled website back up.</inlineHelpText>
        <label>Site Restore</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Social_Media_Specialist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Social Media Specialist</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Launch2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <formula>Account__r.ShippingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Gathering Requirements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>With Designer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress - Not Booked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oracle Order Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Order Closed Waiting on Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed w/ Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed w/o Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed Preactivation Cancellation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed as Duplicate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Activation Steps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bookable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Booked</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>